# rust_quote_stream

./: .gitignore  Cargo.toml  README.md  client_tickers.txt  conventions.md  idea.md  server_config.toml  tickers.txt  vision.md
doc/: tasklist.md  workflow.md
quote_client/: Cargo.toml
quote_client/src/: cli.rs  main.rs  tcp_client.rs  udp_receiver.rs
quote_common/: Cargo.toml
quote_common/src/: lib.rs
quote_server/: Cargo.toml
quote_server/src/: config.rs  generator.rs  main.rs  tcp_handler.rs  udp_streamer.rs
