[workspace]
members = [
    "quote_common",
    "quote_server",
    "quote_client",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
env_logger = "0.11"
log = "0.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
thiserror = "2.0.17"
